Fix Windows builds: Add MSVC C++17 config & disable non-Windows workflows
Critical fixes:
- Add comprehensive MSVC C++17 configuration to cogutil/cmake/OpenCogGccOptions.cmake
- Enable C++17 standard, OpenMP, parallel compilation for MSVC
- Fix filesystem header availability issue on Windows

Workflow management:
- Temporarily disable 14 non-Windows workflows to focus on Windows builds
- Fix auto-sync.yml to use correct workflow names and git_pat secret
- Disable chocolatey-package.yml build job until Windows builds are stable

This addresses the critical Windows build failures where CogUtil was failing
due to missing C++17 configuration for MSVC compiler.

Disabled workflows:
- cogci.yml, st.yml, stw.yml, server.yml, docker.yml
- build-cmake-pkg.yml, python-lint.yml, python-type-check.yml
- python-check-requirements.yml, release.yml
- generate-triadic-issues.yml, generate-enhanced-triadic-issues.yml
- gguf-publish.yml, apt-repository.yml

Active Windows workflows:
- occ-win-build.yml, wincog.yml, chocolatey-package.yml, winget.yml
- auto-sync.yml (for git-pat integration)
- Utility workflows: close-issue.yml, labeler.yml, editorconfig.yml

--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -5,7 +5,7 @@ name: Auto Sync Repository
 
 on:
   workflow_run:
-    workflows: ["OCC Windows Build", "wincog"]
+    workflows: ["OCC Windows Build", "OCC Build - Windows Native (wincog)"]
     types:
       - completed
     branches:
@@ -42,7 +42,7 @@ jobs:
     
     - name: Add target remote
       run: |
-        git remote add target https://${{ secrets.GIT_PAT }}@github.com/${{ env.TARGET_REPO }}.git
+        git remote add target https://${{ secrets.git_pat }}@github.com/${{ env.TARGET_REPO }}.git
         git remote -v
     
     - name: Fetch target repository
