--- a/.github/workflows/chocolatey-package.yml
+++ b/.github/workflows/chocolatey-package.yml
@@ -17,6 +17,9 @@ jobs:
   build-windows:
     runs-on: windows-latest
     name: Build Windows Binaries
+    # This job is currently disabled - it should use the artifacts from wincog.yml or occ-win-build.yml
+    # Re-enable after Windows builds are stable
+    if: false
     
     steps:
     - name: Checkout Repository
