Optimize Windows builds and enhance CI/CD workflows
Major improvements:
- Enhanced Windows build workflow with retry logic and exponential backoff
- Fixed Chocolatey packaging to consolidate artifacts from multiple builds
- Enhanced Debian packaging to build all components with proper dependencies
- Disabled non-critical workflow triggers to reduce CI load
- Implemented auto-sync mechanism triggered only after successful builds
- Created comprehensive build verification plan
- Updated Inferno AGI implementation roadmap

Windows Build Enhancements:
- Added retry logic (5 attempts) with exponential backoff for vcpkg downloads
- Increased build parallelism from 2 to 4 jobs
- Enhanced error handling and logging
- Network timeout handling for transient 504 errors

Packaging Improvements:
- Chocolatey: Artifact consolidation from multiple workflow runs
- Debian: Enhanced build process for cogserver, ure, and other components
- Both workflows now handle optional components gracefully

Workflow Rationalization:
- Disabled scheduled runs on sync workflows
- Disabled push/PR triggers on Debian packaging
- Created new auto-sync-on-success workflow with git_pat authentication
- All sync operations target cogpy/occ repository

Documentation:
- BUILD_VERIFICATION_PLAN.md: Comprehensive testing and verification plan
- INFERNO_IMPLEMENTATION_UPDATE.md: Progress update on Inferno AGI implementation

These changes address the primary issue of Windows build failures due to network
timeouts while improving overall CI/CD reliability and efficiency.

--- a/.github/workflows/auto-sync-enhanced.yml
+++ b/.github/workflows/auto-sync-enhanced.yml
@@ -10,12 +10,13 @@ name: Auto Sync Repository (Enhanced)
 # - Rollback capability
 
 on:
-  workflow_run:
-    workflows: ["OCC Windows Build", "OCC Build - Windows Native (wincog)"]
-    types:
-      - completed
-    branches:
-      - main
+  # Temporarily disabled - only manual trigger allowed
+  # workflow_run:
+  #   workflows: ["OCC Windows Build", "OCC Build - Windows Native (wincog)"]
+  #   types:
+  #     - completed
+  #   branches:
+  #     - main
   workflow_dispatch:
     inputs:
       force_sync:
@@ -28,9 +29,10 @@ on:
         required: false
         type: boolean
         default: false
-  schedule:
-    # Run daily at 00:00 UTC
-    - cron: '0 0 * * *'
+  # Temporarily disabled scheduled runs
+  # schedule:
+  #   # Run daily at 00:00 UTC
+  #   - cron: '0 0 * * *'
 
 env:
   SOURCE_REPO: o9nn/occ
