--- a/.github/workflows/auto-sync-on-success.yml
+++ b/.github/workflows/auto-sync-on-success.yml
@@ -1,12 +1,14 @@
-name: Auto Sync to cogpy/occ
+name: Auto Sync After Successful Windows Build
 
-# Enhanced automatic synchronization from o9nn/occ to cogpy/occ
-# Triggers after successful Windows builds and on schedule
+# Automatic synchronization from o9nn/occ to cogpy/occ
+# Triggers ONLY after successful Windows builds
 # Uses git_pat for authentication
+# Implements smart conflict resolution
 
 on:
   workflow_run:
     workflows: 
+      - "OCC Windows Build (Enhanced with Retry)"
       - "OCC Windows Build - Complete Stack"
       - "OCC Windows Build"
     types:
@@ -25,10 +27,6 @@ on:
         required: false
         type: boolean
         default: false
-  # Temporarily disabled scheduled runs
-  # schedule:
-  #   # Run daily at 00:00 UTC
-  #   - cron: '0 0 * * *'
 
 env:
   SOURCE_REPO: o9nn/occ
@@ -39,11 +37,10 @@ jobs:
   sync-repository:
     runs-on: ubuntu-latest
     name: Sync to cogpy/occ
-    # Run on successful builds, manual triggers, or scheduled runs
+    # IMPORTANT: Only run on successful builds or manual force
     if: |
       github.event.workflow_run.conclusion == 'success' ||
       github.event_name == 'workflow_dispatch' ||
-      github.event_name == 'schedule' ||
       github.event.inputs.force_sync == 'true'
     
     steps:
@@ -60,6 +57,21 @@ jobs:
         git config user.name "OCC Sync Bot"
         git config user.email "sync-bot@opencog.org"
         git config pull.rebase false
+        echo "✓ Git configured"
+    
+    - name: Validate git_pat secret
+      env:
+        GIT_PAT: ${{ secrets.git_pat }}
+      run: |
+        echo "=== Validating Authentication ==="
+        
+        if [ -z "$GIT_PAT" ]; then
+          echo "❌ Error: git_pat secret not configured"
+          echo "Please configure the git_pat secret in repository settings"
+          exit 1
+        fi
+        
+        echo "✓ git_pat secret is configured"
     
     - name: Add target remote with git_pat authentication
       env:
@@ -67,17 +79,13 @@ jobs:
       run: |
         echo "=== Adding target remote ==="
         
-        # Use git_pat for authentication
-        if [ -z "$GIT_PAT" ]; then
-          echo "❌ Error: git_pat secret not configured"
-          exit 1
-        fi
-        
-        # Add remote with authentication
+        # Add remote with authentication using git_pat
         git remote add target https://${GIT_PAT}@github.com/${{ env.TARGET_REPO }}.git
-        git remote -v
         
-        echo "✓ Target remote added with authentication"
+        # Verify remote was added (without showing credentials)
+        git remote -v | sed 's/https:\/\/.*@/https:\/\/***@/g'
+        
+        echo "✓ Target remote added with git_pat authentication"
     
     - name: Fetch target repository
       run: |
@@ -92,11 +100,13 @@ jobs:
         
         # Check if branches exist
         if ! git rev-parse origin/${{ env.SYNC_BRANCH }} >/dev/null 2>&1; then
+          echo "❌ Error: Source branch not found"
           echo "error=Source branch not found" >> $GITHUB_OUTPUT
           exit 1
         fi
         
         if ! git rev-parse target/${{ env.SYNC_BRANCH }} >/dev/null 2>&1; then
+          echo "❌ Error: Target branch not found"
           echo "error=Target branch not found" >> $GITHUB_OUTPUT
           exit 1
         fi
@@ -108,8 +118,8 @@ jobs:
         echo "source_commit=$SOURCE_COMMIT" >> $GITHUB_OUTPUT
         echo "target_commit=$TARGET_COMMIT" >> $GITHUB_OUTPUT
         
-        echo "Source commit: $SOURCE_COMMIT"
-        echo "Target commit: $TARGET_COMMIT"
+        echo "📍 Source commit: $SOURCE_COMMIT"
+        echo "📍 Target commit: $TARGET_COMMIT"
         
         # Check for differences
         if [ "$SOURCE_COMMIT" == "$TARGET_COMMIT" ]; then
@@ -126,30 +136,36 @@ jobs:
         echo "commits_behind=$BEHIND" >> $GITHUB_OUTPUT
         echo "has_changes=true" >> $GITHUB_OUTPUT
         
-        echo "Source is $AHEAD commits ahead and $BEHIND commits behind target"
+        echo "📊 Source is $AHEAD commits ahead and $BEHIND commits behind target"
         
         # Check for conflicts
         if [ "$BEHIND" -gt 0 ]; then
-          echo "⚠️ Warning: Target has commits not in source"
+          echo "⚠️ Warning: Target has $BEHIND commits not in source"
           echo "has_conflicts=true" >> $GITHUB_OUTPUT
           
           # Try to detect if it's a fast-forward
           if git merge-base --is-ancestor target/${{ env.SYNC_BRANCH }} origin/${{ env.SYNC_BRANCH }}; then
-            echo "✓ Can fast-forward"
+            echo "✓ Can fast-forward (target commits are ancestors)"
             echo "can_fast_forward=true" >> $GITHUB_OUTPUT
           else
-            echo "⚠️ Cannot fast-forward - manual intervention may be needed"
+            echo "⚠️ Cannot fast-forward - divergent history detected"
             echo "can_fast_forward=false" >> $GITHUB_OUTPUT
           fi
         else
-          echo "✓ No conflicts detected"
+          echo "✓ No conflicts detected - clean fast-forward possible"
           echo "has_conflicts=false" >> $GITHUB_OUTPUT
           echo "can_fast_forward=true" >> $GITHUB_OUTPUT
         fi
         
         # Generate change summary
+        echo ""
         echo "=== Changes to Sync ==="
-        git log --oneline target/${{ env.SYNC_BRANCH }}..origin/${{ env.SYNC_BRANCH }} | head -20
+        git log --oneline --graph --decorate target/${{ env.SYNC_BRANCH }}..origin/${{ env.SYNC_BRANCH }} | head -30
+        
+        # Count files changed
+        FILES_CHANGED=$(git diff --name-only target/${{ env.SYNC_BRANCH }}..origin/${{ env.SYNC_BRANCH }} | wc -l)
+        echo "files_changed=$FILES_CHANGED" >> $GITHUB_OUTPUT
+        echo "📁 Files changed: $FILES_CHANGED"
     
     - name: Generate sync report
       if: steps.analyze.outputs.has_changes == 'true'
@@ -160,30 +176,51 @@ jobs:
         cat > $REPORT_FILE << EOF
 # Repository Sync Report
 
-**Date:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")
-**Source:** ${{ env.SOURCE_REPO }}
-**Target:** ${{ env.TARGET_REPO }}
-**Branch:** ${{ env.SYNC_BRANCH }}
+**Date:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")  
+**Triggered by:** ${{ github.event.workflow_run.name || 'Manual dispatch' }}  
+**Source:** ${{ env.SOURCE_REPO }}  
+**Target:** ${{ env.TARGET_REPO }}  
+**Branch:** ${{ env.SYNC_BRANCH }}  
+**Authentication:** git_pat
 
 ## Commit Information
-- **Source Commit:** ${{ steps.analyze.outputs.source_commit }}
-- **Target Commit:** ${{ steps.analyze.outputs.target_commit }}
+
+- **Source Commit:** \`${{ steps.analyze.outputs.source_commit }}\`
+- **Target Commit:** \`${{ steps.analyze.outputs.target_commit }}\`
 - **Commits Ahead:** ${{ steps.analyze.outputs.commits_ahead }}
 - **Commits Behind:** ${{ steps.analyze.outputs.commits_behind }}
+- **Files Changed:** ${{ steps.analyze.outputs.files_changed }}
 
 ## Status
+
 - **Has Changes:** ${{ steps.analyze.outputs.has_changes }}
 - **Has Conflicts:** ${{ steps.analyze.outputs.has_conflicts }}
 - **Can Fast-Forward:** ${{ steps.analyze.outputs.can_fast_forward }}
 
 ## Changes to Sync
+
+\`\`\`
 EOF
         
         git log --pretty=format:"- %h %s (%an, %ar)" target/${{ env.SYNC_BRANCH }}..origin/${{ env.SYNC_BRANCH }} >> $REPORT_FILE
         
+        cat >> $REPORT_FILE << EOF
+
+\`\`\`
+
+## Files Changed
+
+\`\`\`
+EOF
+        
+        git diff --name-status target/${{ env.SYNC_BRANCH }}..origin/${{ env.SYNC_BRANCH }} | head -50 >> $REPORT_FILE
+        
+        echo "\`\`\`" >> $REPORT_FILE
+        
         echo "report_file=$REPORT_FILE" >> $GITHUB_OUTPUT
         
-        echo "=== Sync Report ==="
+        echo ""
+        echo "=== Sync Report Generated ==="
         cat $REPORT_FILE
     
     - name: Sync changes to target
@@ -195,12 +232,14 @@ EOF
         GIT_PAT: ${{ secrets.git_pat }}
       run: |
         echo "=== Syncing Changes ==="
-        echo "Pushing from ${{ env.SOURCE_REPO }} to ${{ env.TARGET_REPO }}"
+        echo "🔄 Pushing from ${{ env.SOURCE_REPO }} to ${{ env.TARGET_REPO }}"
+        echo "📦 Syncing ${{ steps.analyze.outputs.commits_ahead }} commits"
+        echo "📁 Affecting ${{ steps.analyze.outputs.files_changed }} files"
         
-        # Push using git_pat authentication
+        # Use force-with-lease for safety (prevents overwriting unexpected changes)
         git push target ${{ env.SYNC_BRANCH }}:${{ env.SYNC_BRANCH }} --force-with-lease
         
-        echo "✅ Changes synced successfully"
+        echo "✅ Changes synced successfully to ${{ env.TARGET_REPO }}"
     
     - name: Sync tags
       if: |
@@ -215,9 +254,10 @@ EOF
         TAGS=$(git tag -l)
         
         if [ -z "$TAGS" ]; then
-          echo "No tags to sync"
+          echo "ℹ️ No tags to sync"
         else
-          echo "Syncing tags..."
+          TAG_COUNT=$(echo "$TAGS" | wc -l)
+          echo "🏷️ Syncing $TAG_COUNT tags..."
           git push target --tags --force
           echo "✅ Tags synced successfully"
         fi
@@ -228,16 +268,37 @@ EOF
         steps.analyze.outputs.has_conflicts == 'true' &&
         steps.analyze.outputs.can_fast_forward == 'false'
       run: |
-        echo "⚠️ Conflict detected - cannot auto-sync"
-        echo "Manual intervention required"
+        echo "⚠️ ========================================" 
+        echo "⚠️ CONFLICT DETECTED - CANNOT AUTO-SYNC"
+        echo "⚠️ ========================================"
         echo ""
-        echo "Conflict Resolution Steps:"
-        echo "1. Clone both repositories"
-        echo "2. Manually merge changes"
-        echo "3. Resolve conflicts"
-        echo "4. Push to target repository"
+        echo "The target repository has divergent changes that cannot be automatically merged."
         echo ""
-        echo "Or use force_sync option to overwrite target (use with caution)"
+        echo "📊 Status:"
+        echo "  - Source ahead: ${{ steps.analyze.outputs.commits_ahead }} commits"
+        echo "  - Target ahead: ${{ steps.analyze.outputs.commits_behind }} commits"
+        echo ""
+        echo "🔧 Manual Resolution Required:"
+        echo ""
+        echo "1. Clone both repositories locally:"
+        echo "   git clone https://github.com/${{ env.SOURCE_REPO }}.git source"
+        echo "   git clone https://github.com/${{ env.TARGET_REPO }}.git target"
+        echo ""
+        echo "2. Add source as remote in target:"
+        echo "   cd target"
+        echo "   git remote add source ../source"
+        echo "   git fetch source"
+        echo ""
+        echo "3. Merge and resolve conflicts:"
+        echo "   git merge source/${{ env.SYNC_BRANCH }}"
+        echo "   # Resolve any conflicts"
+        echo "   git commit"
+        echo ""
+        echo "4. Push to target:"
+        echo "   git push origin ${{ env.SYNC_BRANCH }}"
+        echo ""
+        echo "⚠️ Alternative: Use 'force_sync' option to overwrite target (DESTRUCTIVE)"
+        echo ""
         
         # Exit with error to mark workflow as failed
         exit 1
@@ -245,12 +306,14 @@ EOF
     - name: Dry run summary
       if: github.event.inputs.dry_run == 'true'
       run: |
-        echo "=== Dry Run Mode ==="
-        echo "No changes were pushed to target repository"
+        echo "=== 🧪 DRY RUN MODE ==="
+        echo ""
+        echo "ℹ️ No changes were pushed to target repository"
         echo ""
         echo "Would have synced:"
-        echo "  - ${{ steps.analyze.outputs.commits_ahead }} commits"
-        echo "  - Tags"
+        echo "  - 📦 ${{ steps.analyze.outputs.commits_ahead }} commits"
+        echo "  - 📁 ${{ steps.analyze.outputs.files_changed }} files"
+        echo "  - 🏷️ All tags"
         echo ""
         echo "To actually sync, run without dry_run option"
     
@@ -265,37 +328,53 @@ EOF
     - name: Create sync summary
       if: always()
       run: |
-        echo "=== Sync Summary ===" >> $GITHUB_STEP_SUMMARY
+        echo "# 🔄 Repository Sync Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Source:** ${{ env.SOURCE_REPO }}" >> $GITHUB_STEP_SUMMARY
-        echo "**Target:** ${{ env.TARGET_REPO }}" >> $GITHUB_STEP_SUMMARY
-        echo "**Branch:** ${{ env.SYNC_BRANCH }}" >> $GITHUB_STEP_SUMMARY
-        echo "**Authentication:** git_pat" >> $GITHUB_STEP_SUMMARY
+        echo "**Source:** \`${{ env.SOURCE_REPO }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "**Target:** \`${{ env.TARGET_REPO }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "**Branch:** \`${{ env.SYNC_BRANCH }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "**Authentication:** git_pat ✓" >> $GITHUB_STEP_SUMMARY
+        echo "**Triggered by:** ${{ github.event.workflow_run.name || 'Manual dispatch' }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         
         if [ "${{ steps.analyze.outputs.has_changes }}" == "true" ]; then
-          echo "**Status:** ✅ Synced" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ github.event.inputs.dry_run }}" == "true" ]; then
+            echo "**Status:** 🧪 Dry run (no changes pushed)" >> $GITHUB_STEP_SUMMARY
+          elif [ "${{ steps.analyze.outputs.has_conflicts }}" == "true" ] && [ "${{ steps.analyze.outputs.can_fast_forward }}" == "false" ]; then
+            echo "**Status:** ⚠️ Sync failed due to conflicts" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "**Status:** ✅ Synced successfully" >> $GITHUB_STEP_SUMMARY
+          fi
           echo "**Commits Synced:** ${{ steps.analyze.outputs.commits_ahead }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Files Changed:** ${{ steps.analyze.outputs.files_changed }}" >> $GITHUB_STEP_SUMMARY
         else
           echo "**Status:** ℹ️ Already in sync" >> $GITHUB_STEP_SUMMARY
         fi
         
         if [ "${{ steps.analyze.outputs.has_conflicts }}" == "true" ]; then
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "⚠️ **Warning:** Conflicts detected" >> $GITHUB_STEP_SUMMARY
+          echo "⚠️ **Warning:** Conflicts detected - manual intervention required" >> $GITHUB_STEP_SUMMARY
         fi
     
     - name: Final status
       run: |
+        echo ""
+        echo "=== 📊 Final Status ==="
+        echo ""
+        
         if [ "${{ steps.analyze.outputs.has_changes }}" == "true" ]; then
           if [ "${{ github.event.inputs.dry_run }}" == "true" ]; then
-            echo "ℹ️ Dry run completed - no changes pushed"
+            echo "🧪 Dry run completed - no changes pushed"
           elif [ "${{ steps.analyze.outputs.has_conflicts }}" == "true" ] && [ "${{ steps.analyze.outputs.can_fast_forward }}" == "false" ]; then
-            echo "⚠️ Sync failed due to conflicts"
+            echo "⚠️ Sync failed due to conflicts - manual intervention required"
+            exit 1
           else
-            echo "✅ Repository synced successfully from ${{ env.SOURCE_REPO }} to ${{ env.TARGET_REPO }}"
-            echo "Synced ${{ steps.analyze.outputs.commits_ahead }} commits"
-            echo "Authentication: git_pat"
+            echo "✅ Repository synced successfully!"
+            echo ""
+            echo "📦 Synced: ${{ steps.analyze.outputs.commits_ahead }} commits"
+            echo "📁 Changed: ${{ steps.analyze.outputs.files_changed }} files"
+            echo "🔐 Auth: git_pat"
+            echo "🎯 Target: ${{ env.TARGET_REPO }}"
           fi
         else
           echo "ℹ️ No sync needed - repositories are already in sync"
