Fix Windows builds & optimize GitHub Actions workflows
- Fixed Windows build workflow with proper boost-serialization dependencies
- Added vcpkg_installed directory sharing between build stages
- Improved dependency resolution for Moses, AtomSpace, CogUtil
- Added consolidated build artifacts stage for Electron app integration
- Disabled redundant Windows build workflows temporarily
- Fixed Chocolatey and Electron app workflows to depend on correct build
- Implemented auto-sync workflow with git-pat for cogpy/occ sync
- Temporarily disabled auto-sync-on-success to focus on Windows builds
- Added comprehensive error handling and verification steps
- Increased parallel build jobs from 2 to 4 for faster builds

--- a/.github/workflows/chocolatey-package.yml
+++ b/.github/workflows/chocolatey-package.yml
@@ -6,7 +6,7 @@ name: Build Chocolatey Package
 
 on:
   workflow_run:
-    workflows: ["OCC Windows Build - Complete Stack", "OCC Windows Build (Enhanced with Retry)"]
+    workflows: ["OCC Windows Build"]
     types:
       - completed
     branches:
