Fix: Optimize Windows builds and disable non-Windows workflows
- Add concurrency control to occ-win-build.yml to prevent multiple simultaneous builds
- Disable non-Windows workflows (Debian, Guix, general CI) to focus on Windows builds
- Fix vcpkg baseline mismatch between vcpkg.json and vcpkg-configuration.json
- Add comprehensive workflow audit and fixes documentation

This resolves resource waste from concurrent builds and focuses all efforts on
producing functional Windows binaries for the Electron desktop app without errors
or mock placeholders.

Ref: Phase 3 - Windows Build Optimization

--- a/.github/workflows/occ-win-build.yml
+++ b/.github/workflows/occ-win-build.yml
@@ -12,6 +12,10 @@ on:
     branches: [ "main", "master" ]
   workflow_dispatch:
 
+concurrency:
+  group: windows-build-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   BUILD_TYPE: Release
   CMAKE_GENERATOR: "Visual Studio 17 2022"
