fix: Resolve Moses Boost serialization detection issue
Phase 3 Fix: Moses build was failing because CMake couldn't find
boost_serialization component from vcpkg installation.

Root Cause:
- Moses CMakeLists.txt uses FIND_PACKAGE(Boost ... COMPONENTS serialization)
- By default, CMake looks for BoostConfig.cmake and component-specific configs
- vcpkg installs Boost with unified config, not individual component configs
- This caused 'Could not find boost_serialization' error

Solution:
- Added -DBoost_NO_BOOST_CMAKE=ON to force FindBoost.cmake module mode
- Added explicit Boost_INCLUDE_DIR and Boost_LIBRARY_DIR paths
- This allows CMake to find Boost components via pattern matching

Expected Outcome:
- Moses configuration will successfully find all Boost components
- Moses will build without errors
- All Windows builds will complete successfully
- Build artifacts will be ready for Electron app integration

Tested Against:
- Previous failure: Run #20519554333 (boost_serialization not found)
- vcpkg.json specifies boost-serialization correctly
- Moses requires: date_time, filesystem, program_options, regex,
  serialization, system, thread

Ref: Phase 3 - Windows Build Error Resolution

--- a/.github/workflows/occ-win-build.yml
+++ b/.github/workflows/occ-win-build.yml
@@ -338,8 +338,11 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$env:GITHUB_WORKSPACE/install" `
           -DCMAKE_PREFIX_PATH="$env:CMAKE_PREFIX_PATH" `
           -DVCPKG_INSTALLED_DIR="$env:VCPKG_INSTALLED_DIR" `
+          -DBoost_NO_BOOST_CMAKE=ON `
           -DBoost_DIR="$env:Boost_DIR" `
-          -DBOOST_ROOT="$env:VCPKG_INSTALLED_DIR/x64-windows"
+          -DBOOST_ROOT="$env:VCPKG_INSTALLED_DIR/x64-windows" `
+          -DBoost_INCLUDE_DIR="$env:VCPKG_INSTALLED_DIR/x64-windows/include" `
+          -DBoost_LIBRARY_DIR="$env:VCPKG_INSTALLED_DIR/x64-windows/lib"
         Write-Host "Configuration complete" -ForegroundColor Green
     
     - name: Build Moses
